AV-24184 Added datalog flag

--- a/python/avi/sdk/test/test_api.cfg
+++ b/python/avi/sdk/test/test_api.cfg
@@ -5,6 +5,7 @@
         "password": "avi123",
         "tenant": "admin",
         "api_version": "17.1.6"
+        "datalog": true
     },
 
     "User2": {
@@ -13,6 +14,7 @@
         "password": "avi123$%",
         "tenant": "admin",
         "api_version": "17.1.6"
+        "datalog": true
     },
 
     "BasicVS": {
