AV-24184 minor fixes

--- a/python/avi/sdk/test/test_api.cfg
+++ b/python/avi/sdk/test/test_api.cfg
@@ -4,7 +4,7 @@
         "username": "admin",
         "password": "avi123",
         "tenant": "admin",
-        "api_version": "17.1.6"
+        "api_version": "17.1.6",
         "datalog": true
     },
 
@@ -13,7 +13,7 @@
         "username": "chaitanya",
         "password": "avi123$%",
         "tenant": "admin",
-        "api_version": "17.1.6"
+        "api_version": "17.1.6",
         "datalog": true
     },
 
