AV-24184 changed variable name

--- a/python/avi/sdk/test/test_api.cfg
+++ b/python/avi/sdk/test/test_api.cfg
@@ -5,7 +5,7 @@
         "password": "avi123",
         "tenant": "admin",
         "api_version": "17.1.6",
-        "datalog": true
+        "data_log": true
     },
 
     "User2": {
@@ -14,7 +14,7 @@
         "password": "avi123$%",
         "tenant": "admin",
         "api_version": "17.1.6",
-        "datalog": true
+        "data_log": true
     },
 
     "BasicVS": {
